--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "serve": "^13.0.2",
     "twilio-video": "^2.21.1"
   },
   "scripts": {
